--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "framer-motion": "^11.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.21.3",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
