--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "@supabase/supabase-js": "^2.39.3",
+        "axios": "^1.6.7",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
