--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
+        "axios": "^1.6.7",
         "framer-motion": "^11.0.3",
         "jsonwebtoken": "^9.0.2",
         "react": "^18.2.0",
