--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
         "react-icons": "^5.0.1",
         "react-query": "^3.39.3",
         "react-router-dom": "^6.21.3",
+        "react-toastify": "^10.0.4",
         "recoil": "^0.7.7"
     },
     "devDependencies": {
