--- a/backend/package.json
+++ b/backend/package.json
@@ -2,24 +2,30 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "index.ts",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon index.js"
+        "dev": "nodemon index.ts"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@supabase/supabase-js": "^2.39.3",
-        "axios": "^1.6.7",
+        "@prisma/client": "^5.9.1",
         "bcrypt": "^5.1.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.1.1",
         "nodemon": "^3.0.3",
         "zod": "^3.22.4"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/express": "^4.17.21",
+        "@types/node": "^20.11.17",
+        "prisma": "^5.9.1",
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3"
     }
 }
