--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,10 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
+        "@types/jsonwebtoken": "^9.0.5",
         "@types/node": "^20.11.17",
         "prisma": "^5.9.1",
         "ts-node": "^10.9.2",
