--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
         "@chakra-ui/react": "^2.8.2",
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
+        "file-saver": "^2.0.5",
         "framer-motion": "^11.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^5.0.1",
         "react-router-dom": "^6.21.3",
         "react-toastify": "^10.0.4",
+        "react-use-file-upload": "^0.9.5",
         "recoil": "^0.7.7"
     },
     "devDependencies": {
